--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Webhosting Expert
+author: webhosting-admin
+email: webmaster@webhosting-expert.eu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
-# social links
+  In this blog you can learn more about the installation of Filezilla, uploading files to the FTP-Server and protecting your email-address against the major internet threats. 
+  
+  social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme: minima
